--- a/index.html
+++ b/index.html
@@ -63,16 +63,6 @@
               </a>
             </li>
           </ul>
-
-          <!-- <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Login</a>
-              </li>
-              
-            </ul> -->
         </div>
       </div>
     </nav>
@@ -103,7 +93,7 @@
           </div>
           <div class="col-md-6 p-2">
             <img
-              src="images/cat.jpg"
+              src="images/img_car.png"
               alt="cat"
               class="img-fluid ms-5 rounded-5"
             />
