redesign, make section 2 and starting section 3

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap Example</title>
+    <title>Binar Car Rental</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script
@@ -17,52 +17,58 @@
     <!-- membuat navbar di sebelah kanan -->
     <nav class="navbar navbar-expand-lg jumbotron-background-color">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand navbar-brand-bg" href="#">Offcanvas navb</a>
         <button
           class="navbar-toggler"
           type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <!--  -->
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">
-                <button class="btn btn-success">Register</button>
-              </a>
-            </li>
-          </ul>
+        <div
+          class="offcanvas offcanvas-end"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-xl-center">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Our Services</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Why Us</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Testimonial</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">FAQ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">
+                  <button class="btn btn-green">Register</button>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
@@ -71,43 +77,41 @@
     <!-- padding, jarak konten dengan sekitarnya/div-nya -->
     <!-- background _ warna text _ rounded _ arah text-->
     <!-- class="mb-5 p-5 bg-dark text-white rounded text-center" -->
-    <div class="mb-5 p-5 jumbotron-background-color">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 p-2">
-            <div class="d-flex flex-column justify-content-center h-100 me-5">
+    <div class="mb-5 jumbotron-background-color">
+      <div class="container me-0 p-0">
+        <div class="row p-0">
+          <div class="col-md-6">
+            <div
+              class="d-flex flex-column justify-content-center h-100 me-5 p-2"
+            >
               <h1 class="my-2">
-                Sewa & Rental Mobil Terbaik di kawasan (Lokasimu)
+                Sewa & Rental Mobil Terbaik di Kawasan Yogyakarta
               </h1>
-              <p class="my-2 text-justify">
+              <p class="my-2 me-5 text-justify">
                 Selamat datang di Binar Car Rental. Kami menyediakan mobil
                 kualitas terbaik dengan harga terjangkau. Selalu siap melayani
                 kebutuhanmu untuk sewa mobil selama 24 jam.
               </p>
               <div>
-                <button type="button" class="my-2 btn btn-success">
-                  Click here for details
+                <button type="button" class="my-2 btn btn-green">
+                  Mulai Sewa Mobil
                 </button>
               </div>
             </div>
           </div>
-          <div class="col-md-6 p-2">
-            <img
-              src="images/img_car.png"
-              alt="cat"
-              class="img-fluid ms-5 rounded-5"
-            />
+          <div class="col-md-6">
+            <img src="images/img_car.png" alt="cat" class="img-fluid mt-4" />
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container mb-5">
+    <div class="container mb-5 pt-4">
       <div class="row">
         <div class="col-md-6 p-2">
           <div class="d-flex justify-content-center">
             <img
-              src="images/img-service.png"
+              src="images/img_service.png"
               alt="image service"
               class="img-fluid me-5"
             />
@@ -115,32 +119,70 @@
         </div>
         <div class="col-md-6 p-2">
           <div class="ms-5">
-            <h1 class="my-2 text-justify">
-              Best Car Rental for any kind of trip in (Lokasimu)!
-            </h1>
-            <p class="my-2 text-justify">
+            <h2 class="my-2">
+              Best Car Rental For Any Kind of Trip in Yogyakarta!
+            </h2>
+            <p class="my-4 text-justify">
               Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga
               lebih murah dibandingkan yang lain, kondisi mobil baru, serta
               kualitas pelayanan terbaik untuk perjalanan wisata, bisnis,
               wedding, meeting, dll.
             </p>
 
-            <h6 class="text-normal-weight my-2">
+            <h6 class="text-normal-weight my-3">
               <span
-                ><i
-                  class="fa-sharp fa-solid fa-circle-check"
-                  style="color: #607cf1"
-                ></i
-              ></span>
+                ><img
+                  src="images/icon_check.png"
+                  alt="check"
+                  class="img-fluid me-2 align-items-center"
+              /></span>
               Sewa Mobil Dengan Supir di Bali 12 Jam
+            </h6>
+            <h6 class="text-normal-weight my-3">
+              <span
+                ><img
+                  src="images/icon_check.png"
+                  alt="check"
+                  class="img-fluid me-2 align-items-center"
+              /></span>
+              Sewa Mobil Lepas Kunci di Bali 24 Jam
+            </h6>
+            <h6 class="text-normal-weight my-3">
+              <span
+                ><img
+                  src="images/icon_check.png"
+                  alt="check"
+                  class="img-fluid me-2 align-items-center"
+              /></span>
+              Sewa Mobil Jangka Panjang Bulanan
+            </h6>
+            <h6 class="text-normal-weight my-3">
+              <span
+                ><img
+                  src="images/icon_check.png"
+                  alt="check"
+                  class="img-fluid me-2 align-items-center"
+              /></span>
+              Gratis Antar - Jemput Mobil di Bandara
+            </h6>
+            <h6 class="text-normal-weight my-3 mb-5">
+              <span
+                ><img
+                  src="images/icon_check.png"
+                  alt="check"
+                  class="img-fluid me-2 align-items-center"
+              /></span>
+              Layanan Airport Transfer / Drop In Out
             </h6>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container mb-5">
-      <div class="row">
+    <div class="container my-5 pt-4">
+      <h2>Why Us?</h2>
+      <p>Mengapa harus pilih Binar Car Rental?</p>
+      <div class="row mt-4">
         <div class="col-sm-4">
           <div
             class="bg-secondary rounded-3 text-white p-4 text-white text-justify"
