--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
   </head>
 
   <body>
+    <!-- NAVBAR -->
     <!-- membuat navbar di sebelah kanan -->
-    <nav class="navbar navbar-expand-lg jumbotron-background-color">
+    <nav class="navbar navbar-expand-lg jumbotron-background-color" id="home">
       <div class="container">
-        <a class="navbar-brand navbar-brand-bg" href="#">Binar Car Rental</a>
+        <a class="navbar-brand navbar-brand-bg" href="#home"
+          >Binar Car Rental</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -45,22 +48,22 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-xl-center">
               <li class="nav-item me-2">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a class="nav-link" aria-current="page" href="#our-services"
                   >Our Services</a
                 >
               </li>
               <li class="nav-item me-2">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a class="nav-link" aria-current="page" href="#why-us"
                   >Why Us</a
                 >
               </li>
               <li class="nav-item me-2">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a class="nav-link" aria-current="page" href="#testimonial"
                   >Testimonial</a
                 >
               </li>
               <li class="nav-item me-2">
-                <a class="nav-link active" aria-current="page" href="#">FAQ</a>
+                <a class="nav-link" aria-current="page" href="#faq">FAQ</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link">
@@ -77,6 +80,7 @@
     <!-- padding, jarak konten dengan sekitarnya/div-nya -->
     <!-- background _ warna text _ rounded _ arah text-->
     <!-- class="mb-5 p-5 bg-dark text-white rounded text-center" -->
+    <!-- 1 -->
     <div class="mb-5 jumbotron-background-color">
       <div class="container-fluid p-0">
         <div class="row p-0">
@@ -109,7 +113,8 @@
       </div>
     </div>
 
-    <div class="container mb-5 pt-4">
+    <!-- 2-OUR SERVICES -->
+    <div class="container mb-5 pt-4" id="our-services">
       <div class="row">
         <div class="col-md-6 p-2">
           <div class="d-flex justify-content-center">
@@ -182,7 +187,8 @@
       </div>
     </div>
 
-    <div class="container my-5 pt-4">
+    <!-- 3-WHY US? -->
+    <div class="container my-5 pt-4" id="why-us">
       <h2>Why Us?</h2>
       <p>Mengapa harus pilih Binar Car Rental?</p>
       <div class="row mt-4 justify-content-center">
@@ -253,8 +259,8 @@
       </div>
     </div>
 
-    <!-- TESTIMONIAL -->
-    <div class="container my-5 pt-4">
+    <!-- 4-TESTIMONIAL -->
+    <div class="container my-5 pt-4" id="testimonial">
       <h2 class="text-center">Testimonial</h2>
       <p class="text-center my-4 pb-3">
         Berbagai review positif dari para pelanggan kami
@@ -264,38 +270,38 @@
         class="carousel carousel-dark slide"
         data-bs-ride="carousel"
       >
-        <div class="carousel-inner d-flex justify-content-lg-between">
+        <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
             <div class="container">
               <div class="row d-flex justify-content-center">
-                <div class="col-lg-4 d-none d-lg-block w-75">
-                  <div class="card card-body" style="background-color: #f1f3ff">
+                <div class="col-lg-4 d-none d-lg-block" style="width: 50rem">
+                  <div style="background-color: #f1f3ff">
                     <div class="row my-4 px-4">
-                      <div class="col-auto">
+                      <div class="col-sm-3">
                         <img
                           src="images/img_photo.svg"
                           alt="avatar"
                           style="width: 150px"
                         />
                       </div>
-                      <div class="col">
+                      <div class="col-sm-9">
                         <ul
                           class="list-unstyled d-flex justify-content-left text-warning mb-0"
                         >
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fa fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                         </ul>
                         <p class="text-muted mt-2">
@@ -317,34 +323,34 @@
           <div class="carousel-item" data-bs-interval="8000">
             <div class="container">
               <div class="row d-flex justify-content-center">
-                <div class="col-lg-4 d-none d-lg-block w-75">
+                <div class="col-lg-4 d-none d-lg-block" style="width: 50rem">
                   <div class="card card-body" style="background-color: #f1f3ff">
                     <div class="row my-4 px-4">
-                      <div class="col-auto">
+                      <div class="col-sm-3">
                         <img
                           src="images/img_photo2.svg"
                           alt="avatar"
                           style="width: 150px"
                         />
                       </div>
-                      <div class="col">
+                      <div class="col-sm-9">
                         <ul
                           class="list-unstyled d-flex justify-content-left text-warning mb-0"
                         >
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                         </ul>
                         <p class="text-muted mt-2">
@@ -368,10 +374,13 @@
           <div class="carousel-item" data-bs-interval="7000">
             <div class="container">
               <div class="row d-flex justify-content-center">
-                <div class="col-lg-4 d-none d-lg-block w-75">
-                  <div class="card card-body" style="background-color: #f1f3ff">
+                <div class="col-lg-4 d-none d-lg-block" style="width: 50rem">
+                  <div
+                    class="card card-body w-auto"
+                    style="background-color: #f1f3ff"
+                  >
                     <div class="row my-4 px-4">
-                      <div class="col-auto">
+                      <div class="col-sm-3">
                         <img
                           class="rounded-circle"
                           src="images/img_photo3.webp"
@@ -379,24 +388,24 @@
                           style="width: 150px"
                         />
                       </div>
-                      <div class="col">
+                      <div class="col-sm-9">
                         <ul
                           class="list-unstyled d-flex justify-content-left text-warning mb-0"
                         >
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                           <li class="me-1">
-                            <i class="fas fa-star fa-sm"></i>
+                            <i class="fas fa-star fa-md"></i>
                           </li>
                         </ul>
                         <p class="text-muted mt-2">
@@ -418,30 +427,36 @@
             </div>
           </div>
         </div>
-        <div class="d-flex justify-content-center mt-5">
+        <div class="d-flex justify-content-center mt-4">
           <button
-            class="carousel-control-prev position-relative"
+            class="carousel-control-prev position-relative d-flex justify-content-lg-end mx-3"
             type="button"
             data-bs-target="#carouselExampleDark"
             data-bs-slide="prev"
           >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <!-- <span class="carousel-control-prev-icon" aria-hidden="true" -->
+            <span aria-hidden="true"
+              ><img src="images/left-button.svg" alt=""
+            /></span>
             <span class="visually-hidden">Previous</span>
           </button>
           <button
-            class="carousel-control-next position-relative"
+            class="carousel-control-next position-relative d-flex justify-content-lg-start mx-3"
             type="button"
             data-bs-target="#carouselExampleDark"
             data-bs-slide="next"
           >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <!-- <span class="carousel-control-next-icon" aria-hidden="true" -->
+            <span aria-hidden="true"
+              ><img src="images/right-button.svg" alt=""
+            /></span>
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div></div>
       </div>
     </div>
 
+    <!-- 5-SEWA MOBIL -->
     <div class="container my-5 pt-4 text-white text-center">
       <div
         class="card card-body my-4"
@@ -461,7 +476,8 @@
       </div>
     </div>
 
-    <div class="container my-5 pt-4">
+    <!-- 6-FAQ -->
+    <div class="container my-5 pt-4" id="faq">
       <div class="row">
         <div class="col-md-5">
           <h2 class="mb-3">Frequently Asked Question</h2>
@@ -625,6 +641,7 @@
       </div>
     </div>
 
+    <!-- 7-FOOTER -->
     <div class="footer">
       <div class="container my-5 pt-4">
         <div class="row">
@@ -634,10 +651,10 @@
             <p>081-233-334-808</p>
           </div>
           <div class="col-md-2">
-            <p><a class="a-footer" href="#">Our services</a></p>
-            <p><a class="a-footer" href="#">Why Us</a></p>
-            <p><a class="a-footer" href="#">Testimonial</a></p>
-            <p><a class="a-footer" href="#">FAQ</a></p>
+            <p><a class="a-footer" href="#our-services">Our services</a></p>
+            <p><a class="a-footer" href="#why-us">Why Us</a></p>
+            <p><a class="a-footer" href="#testimonial">Testimonial</a></p>
+            <p><a class="a-footer" href="#faq">FAQ</a></p>
           </div>
           <div class="col-md-3 mb-2">
             <p>Connect with us</p>
