a little bit typo

--- a/index.html
+++ b/index.html
@@ -272,48 +272,46 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <div class="container">
-              <div class="row d-flex justify-content-center">
-                <div class="col-lg-4 d-none d-lg-block" style="width: 50rem">
-                  <div style="background-color: #f1f3ff">
-                    <div class="row my-4 px-4">
-                      <div class="col-sm-3">
-                        <img
-                          src="images/img_photo.svg"
-                          alt="avatar"
-                          style="width: 150px"
-                        />
-                      </div>
-                      <div class="col-sm-9">
-                        <ul
-                          class="list-unstyled d-flex justify-content-left text-warning mb-0"
-                        >
-                          <li class="me-1">
-                            <i class="fa fa-star fa-md"></i>
-                          </li>
-                          <li class="me-1">
-                            <i class="fas fa-star fa-md"></i>
-                          </li>
-                          <li class="me-1">
-                            <i class="fas fa-star fa-md"></i>
-                          </li>
-                          <li class="me-1">
-                            <i class="fas fa-star fa-md"></i>
-                          </li>
-                          <li class="me-1">
-                            <i class="fas fa-star fa-md"></i>
-                          </li>
-                        </ul>
-                        <p class="text-muted mt-2">
-                          <i class="fas fa-quote-left pe-2"></i>
-                          Lorem ipsum dolor sit amet consectetur, adipisicing
-                          elit. Incidunt nisi obcaecati ipsum libero, laudantium
-                          ipsam voluptate asperiores quia maxime! Hic
-                          accusantium est nemo, reprehenderit numquam odio
-                          deleniti laborum fugit pariatur!
-                        </p>
-                        <h6 style="font-weight: bold">John Dee 32, Bromo</h6>
-                      </div>
+            <div class="row d-flex justify-content-center">
+              <div class="col-lg-4 d-none d-lg-block" style="width: 50rem">
+                <div class="card card-body" style="background-color: #f1f3ff">
+                  <div class="row my-4 px-4">
+                    <div class="col-sm-3">
+                      <img
+                        src="images/img_photo.svg"
+                        alt="avatar"
+                        style="width: 150px"
+                      />
+                    </div>
+                    <div class="col-sm-9">
+                      <ul
+                        class="list-unstyled d-flex justify-content-left text-warning mb-0"
+                      >
+                        <li class="me-1">
+                          <i class="fa fa-star fa-md"></i>
+                        </li>
+                        <li class="me-1">
+                          <i class="fas fa-star fa-md"></i>
+                        </li>
+                        <li class="me-1">
+                          <i class="fas fa-star fa-md"></i>
+                        </li>
+                        <li class="me-1">
+                          <i class="fas fa-star fa-md"></i>
+                        </li>
+                        <li class="me-1">
+                          <i class="fas fa-star fa-md"></i>
+                        </li>
+                      </ul>
+                      <p class="text-muted mt-2">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Incidunt nisi obcaecati ipsum libero, laudantium
+                        ipsam voluptate asperiores quia maxime! Hic accusantium
+                        est nemo, reprehenderit numquam odio deleniti laborum
+                        fugit pariatur!
+                      </p>
+                      <h6 style="font-weight: bold">John Dee 32, Bromo</h6>
                     </div>
                   </div>
                 </div>
