--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <nav class="navbar navbar-expand-lg jumbotron-background-color" id="home">
       <div class="container">
         <a class="navbar-brand navbar-brand-bg" href="#home"
-          >Binar Car Rental</a
-        >
+          ><img class="w-25 h-25" src="images/logo-bcr.png" alt="logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -678,9 +678,9 @@
           </div>
           <div class="col-md-3">
             <p>Copyright Binar 2022</p>
-            <p
-              style="background-color: #0d28a6; width: 120px; height: 35px"
-            ></p>
+            <p>
+              <img class="w-50 h-50" src="images/logo-bcr.png" alt="logo" />
+            </p>
           </div>
         </div>
       </div>
