--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <!-- membuat navbar di sebelah kanan -->
     <nav class="navbar navbar-expand-lg jumbotron-background-color" id="home">
       <div class="container">
-        <a class="navbar-brand navbar-brand-bg" href="#home"
-          ><img class="w-25 h-25" src="images/logo-bcr.png" alt="logo"
+        <a
+          class="navbar-brand navbar-brand-bg"
+          href="#home"
+          style="max-width: 10%"
+          ><img class="img-fluid" src="images/logo-bcr.png" alt="logo"
         /></a>
         <button
           class="navbar-toggler"
